# pen-audit

./: .gitignore  README.md  SKILL.md  pyproject.toml
desloppify/: badge.py  mcp_server.py  narrative.py  utils.py  visualize.py
desloppify/commands/: fix_cmd.py  next.py  resolve.py  scan.py  show.py  status.py
desloppify/lang/python/detectors/: deps.py
pen_audit/: __init__.py  __main__.py  cli.py  codebase_matcher.py  pen_parser.py  scoring.py  state.py  utils.py
pen_audit/detectors/: __init__.py  base.py  component.py  crud.py  data_display.py  form.py  interactive.py  navigation.py  screen.py
pen_audit/formatters/: __init__.py  jira.py  markdown.py  routes.py  stubs.py  tests.py
test-data/: kewky-fitness.json
tests/: test_detectors.py  test_formatters.py  test_pen_parser.py
