[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pen-audit"
version = "0.1.0"
description = "Design file scanner — extracts UI features from .pen files into actionable development tasks"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.scripts]
pen-audit = "pen_audit.cli:main"

[tool.setuptools.packages.find]
include = ["pen_audit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
